--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.video {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
